--- a/Douguo/index.html
+++ b/Douguo/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="http://www.douguo.com/favicon.ico" />
 	<link rel="stylesheet" href="css/iconfont/iconfont.css" />
 	<link rel="stylesheet" href="css/index.css" />
-	<!--<link rel="stylesheet" href="css/diary.css" />-->
+	<!--<link rel="stylesheet" href="css/paihang.css" />-->
 </head>
 <body>
 	<div id="homepage" ng-controller="mainpage">
@@ -54,8 +54,8 @@
 						</li>
 						<li><a href="#/delicious/discover">写食派</a></li>
 						<li><a href="#/goodshoping">购好货<span></span></a></li>
-						<li><a href="#/theme/allarticle">主题站</a></li>
-						<li><a href="#/activity/allactive">活动</a></li>
+						<li><a href="#/theme">主题站</a></li>
+						<li><a href="#/activity">活动</a></li>
 					</ul>
 				</div>
 				<div class="nav_right">
@@ -72,20 +72,6 @@
 					<div class="search">
 						<input type="text" placeholder="搜索菜谱、菜单、食材、用户"/>
 						<a class="iconfont" href="" >&#xe618;</a>
-						<div class="searchmore">
-							<ul>
-								<li><a href=""><span>1.</span> 汤</a></li>
-								<li><a href=""><span>2.</span> 南瓜</a></li>
-								<li><a href=""><span>3.</span> 芋头</a></li>
-								<li><a href=""><span>4.</span> 山药</a></li>
-								<li><a href=""><span>5.</span> 山楂</a></li>
-								<li><a href=""><span>6.</span> 蟹</a></li>
-								<li><a href=""><span>7.</span> 莲藕</a></li>
-								<li><a href=""><span>8.</span> 家常菜</a></li>
-								<li><a href=""><span>9.</span> 玉米</a></li>
-								<li><a href=""><span>10.</span> 养生</a></li>
-							</ul>
-						</div>
 					</div>				
 				</div>
 			</div>			
@@ -109,9 +95,9 @@
 				<span>
 					<iframe src="http://widget.weibo.com/relationship/followbutton.php?language=zh_cn&width=136&height=24&uid=1647910344&style=2&;btn=light&dpc=1#" frameborder="0" marginwidth="0" marginheight="0"></iframe>
 				</span>
-				<!--<span>
+				<span>
 					<iframe src="http://follow.v.t.qq.com/index.php?c=follow&a=quick&name=douguomeishi&style=5&t=1351091457260&f=1" frameborder="0" marginwidth="0" marginheight="0"></iframe>
-				</span>-->
+				</span>
 			</div>
 		</footer>
 	</div>	
