--- a/Douguo/index.html
+++ b/Douguo/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="http://www.douguo.com/favicon.ico" />
 	<link rel="stylesheet" href="css/iconfont/iconfont.css" />
 	<link rel="stylesheet" href="css/index.css" />
-	<!--<link rel="stylesheet" href="css/diary.css" />-->
+	<link rel="stylesheet" href="css/hotel.css" />
 </head>
 <body>
 	<div id="homepage" ng-controller="mainpage">
